feat: devices routes and associations
